# immospider

./: .dockerignore  .gitignore  Containerfile  compose.yaml  mise.toml  pyproject.toml
.github/workflows/: container.yml
src/: cache.py  cli.py  models.py  monitor.py  notifications.py  scraper.py
src/immobot_scrapling/: __init__.py  cache.py  cli.py  models.py  monitor.py  notifications.py  scraper.py
src/immobot_scrapling/pages/: __init__.py  immowelt.py
src/immobot_scrapling/sources/: __init__.py  common.py  immobilienscout24.py  immowelt.py
src/pages/: __init__.py  immobilienscout24.py  immowelt.py  kleinanzeigen.py
src/sources/: __init__.py  common.py  immobilienscout24.py  immowelt.py  kleinanzeigen.py
tests/: test_cli.py  test_monitor.py  test_notifications.py  test_scraper.py
